[tool.poetry]
name = "dakgalbi"
version = "0.1.0"
description = ""
authors = ["changmin.ryu <changmin.ryu@timf.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
